@@ -81,6 +81,8 @@ var DEFAULTS = {
   environment: process.env.NODE_ENV || 'development',
   errorOnAbortedRequests: false,
   exitSpanMinDuration: '0ms',
+  // Deprecated: already filtered with `sanitizeFieldNames` defaults
+  // TODO: https://github.com/elastic/apm-agent-nodejs/issues/3332
   filterHttpHeaders: true,
   globalLabels: undefined,
   ignoreMessageQueues: [],
@@ -160,6 +162,8 @@ var ENV_TABLE = {
   elasticsearchCaptureBodyUrls: 'ELASTIC_APM_ELASTICSEARCH_CAPTURE_BODY_URLS',
   errorMessageMaxLength: 'ELASTIC_APM_ERROR_MESSAGE_MAX_LENGTH',
   errorOnAbortedRequests: 'ELASTIC_APM_ERROR_ON_ABORTED_REQUESTS',
+  // Deprecated: already filtered with `sanitizeFieldNames` defaults
+  // TODO: https://github.com/elastic/apm-agent-nodejs/issues/3332
   filterHttpHeaders: 'ELASTIC_APM_FILTER_HTTP_HEADERS',
   frameworkName: 'ELASTIC_APM_FRAMEWORK_NAME',
   frameworkVersion: 'ELASTIC_APM_FRAMEWORK_VERSION',
@@ -1125,9 +1129,23 @@ function normalizeKeyValuePairs (opts) {
   }
 }
 
+/**
+ * Normalize and validate the given values for boolean configuration properties
+ *
+ * - the `filterHttpHeaders` config option is now deprecated. The default values of
+ *   `sanitizeFieldNames` already provide the same filtering of senstive information
+ *   within the `cookie` info
+ */
 function normalizeBools (opts, logger) {
   for (const key of BOOL_OPTS) {
-    if (key in opts) opts[key] = strictBool(logger, key, opts[key])
+    const isKeyPresent = key in opts
+
+    if (isKeyPresent) opts[key] = strictBool(logger, key, opts[key])
+    // TODO: remove this log in the scope of
+    // https://github.com/elastic/apm-agent-nodejs/issues/3332
+    if (isKeyPresent && key === 'filterHttpHeaders') {
+      logger.warn('the `filterHttpHeaders` config option is deprecated')
+    }
   }
 }
 
